--- a/src/AppPartes.Web/Views/Home/Index.cshtml
+++ b/src/AppPartes.Web/Views/Home/Index.cshtml
@@ -32,6 +32,9 @@
                                     <th>Busquedas </th>
                                     <th>Tipos Excel</th>
                                     <th>Calendario</th>
+                                    <th><a class="nav-link text-dark" asp-area="" asp-controller="SearchPending" asp-action="Index">Partes Pendientes</a></th>
+                                </tr>
+                                <tr>
                                     <th>
                                         <a class="nav-link text-dark" href="#" onclick="viewEntities('Actualizar');">Actualizar</a>
                                         <div class="col-12" id="Actualizar" name="Actualizar" style="display:none">
@@ -77,6 +80,8 @@
                                             </table>
                                         </div>
                                     </th>
+                                    <th>XX XX</th>
+                                    <th>XX XX</th>
                                 </tr>
                             </thead>
                         </table>
