--- a/src/AppPartes.Web/Views/Search/Index.cshtml
+++ b/src/AppPartes.Web/Views/Search/Index.cshtml
@@ -2,130 +2,201 @@
 @{
     ViewData["Title"] = "Index";
 }
-@{
-    Layout = null;
-}
 <body class="is-preload">
 
-    <!-- Wrapper -->
-    <div id="wrapper">
-
-        <!-- Main -->
-        <div id="main">
-            <!--<div class="inner">-->
-            <!-- Header -->
-            <header id="header">
-                <a href="#" class="logo"><strong>Grupo Aldakin</strong></a>
-            </header>
-            <!-- Content -->
-            <section>
-                @{
-                    if (!string.IsNullOrEmpty(ViewBag.Message))
-                    {
-                        <div class="alert alert-warning">@ViewBag.Message</div>
-                    }
-                }
-                <header class="main">
-                    <h1>Administracion - Control de partes EN CONSTRUCCION</h1>
-                </header>
-                <!-- Content -->
-                <!--<h2 id="content">Sample Content</h2>-->
-                <form asp-action="SearchEntityData" asp-controller="Search" method="POST">
-                    <div class="col-12">
-                        <label for="start">Seleccione delegación:</label>
-                        <select id="entidad" name="strEntidad" required>
-                            <option value="">
-                            </option>
-                            @foreach (var dept in Model.listCompany)
-                            {
-                                <option value="@dept.CodEnt">
-                                    @dept.Nombre
-                                </option>
-                            }
-                        </select>
-                        <label>Seleccione en el calendario:</label>
-                        <input type="date" id="Calendario" name="strDate"
-                               value=" "
-                               min="@(DateTime.Now.Year - 2)-01-01"
-                               max="@(DateTime.Now.Year + 2)-12-31" required>
-                        <input type="submit" name="strMes" value="Estado Mes" class="primary" />
-                        <input type="submit" name="strSemana" value="Estado Semana " class="primary" />
-                    </div>
-                </form>
-            </section>
-
-
-            <!-- Content -->
-            <section>
-                <header class="main">
-                    <h1>Elements</h1>
-                </header>
-
-                <hr class="major" />
-
-                <!-- Elements -->
-                <h2 id="elements">Elements</h2>
-                <div class="row gtr-200">
-                    <div class="col-12-large">
-                        <!-- Blockquote -->
-                        <h3>Blockquote</h3>
-                        <blockquote>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Lorem ipsum dolor. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.</blockquote>
-
-                        <!-- Table -->
-                        <h3>Table</h3>
-
-                        @* @grid.GetHtml()*@
-
-                        @*<h4>Alternate</h4>
-                            <div class="table-wrapper">
-                                <table class="alt">
-                                    <thead>
-                                        <tr>
-                                            <th>Trabajador</th>
-                                            <th>Description</th>
-                                            <th>Price</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Item1</td>
-                                            <td>Ante turpis integer aliquet porttitor.</td>
-                                            <td>29.99</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Item2</td>
-                                            <td>Vis ac commodo adipiscing arcu aliquet.</td>
-                                            <td>19.99</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Item3</td>
-                                            <td> Morbi faucibus arcu accumsan lorem.</td>
-                                            <td>29.99</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Item4</td>
-                                            <td>Vitae integer tempus condimentum.</td>
-                                            <td>19.99</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Item5</td>
-                                            <td>Ante turpis integer aliquet porttitor.</td>
-                                            <td>29.99</td>
-                                        </tr>
-                                    </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td colspan="2"></td>
-                                            <td>100.00</td>
-                                        </tr>
-                                    </tfoot>
-                                </table>
-                            </div>*@
-
-                    </div>
-                </div>
-            </section>
+    <!-- Content -->
+    <section>
+        @{
+            if (!string.IsNullOrEmpty(ViewBag.Message))
+            {
+                <div class="alert alert-warning">@ViewBag.Message</div>
+            }
+        }
+        <header class="main">
+            <h1>Administracion - Control de partes EN CONSTRUCCION</h1>
+        </header>
+        <!-- Content -->
+        <!--<h2 id="content">Sample Content</h2>-->
+        <div class="col-12" id="lblInfo" name="lblInfo" style="display:none">
+            <blockquote>Cargando información, espere...</blockquote>
         </div>
-    </div>
+        <form asp-controller="Search" asp-action="Index" method="POST">
+            <div class="col-12">
+                <label for="start">Seleccione delegación:</label>
+
+                <select id="strEntity" name="strEntity" required>
+                    <option value="">
+                    </option>
+                    @foreach (var dept in Model.listCompany)
+                    {
+                        <option value="@dept.CodEnt">
+                            @dept.Nombre
+                        </option>
+                    }
+                </select>
+                <label>Seleccione en el calendario:</label>
+                <input type="date" id="strDate" name="strDate"
+                       value=" "
+                       min="@(DateTime.Now.Year - 2)-01-01"
+                       max="@(DateTime.Now.Year + 2)-12-31" required>
+                <input type="submit" name="strStatus" value="Estado Partes" class="primary" />
+                @*<input type="submit" name="strSemana" value="Estado Semana " class="primary" />*@
+
+
+                @*<input type="submit" name="strAction" onclick="statusEntity('strDate','strSummary');" value="Enviar" />*@
+            </div>
+        </form>
+    </section>
+
+
+    <!-- Content -->
+    <section>
+        <header class="main">
+            <h1>Elements</h1>
+        </header>
+
+        <hr class="major" />
+        @if (Model.listResume != null)
+        {
+            @foreach (var dept in Model.listResume)
+            {
+                <div class="table-wrapper">
+                    <h4>@dept.User</h4>
+                    <table class="alt">
+                        <thead>
+                            <tr>
+                                <td>@dept.User</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Dias</td>
+                            </tr>
+                            <tr>
+                                @foreach (var t in dept.lDay)
+                                {
+                                    <td>@t</td>
+                                }
+                            </tr>
+                            <tr>
+                                @foreach (var t in dept.lHour)
+                                {
+                                    <td>@t</td>
+                                }
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div><!-- Elements -->
+            }
+        }
+        <h2 id="elements">Elements</h2>
+        <div class="row gtr-200">
+            <div class="col-12-large">
+                <!-- Blockquote -->
+                <h3>Blockquote</h3>
+                <blockquote>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Lorem ipsum dolor. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.</blockquote>
+
+                <!-- Table -->
+                <div class="col-12">
+                    <textarea name="strSummary" id="strSummary" value="" rows="12"></textarea>
+                </div>
+
+                @* @grid.GetHtml()*@
+
+                @*<h4>Alternate</h4>
+                    <div class="table-wrapper">
+                        <table class="alt">
+                            <thead>
+                                <tr>
+                                    <th>Trabajador</th>
+                                    <th>Description</th>
+                                    <th>Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Item1</td>
+                                    <td>Ante turpis integer aliquet porttitor.</td>
+                                    <td>29.99</td>
+                                </tr>
+                                <tr>
+                                    <td>Item2</td>
+                                    <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                                    <td>19.99</td>
+                                </tr>
+                                <tr>
+                                    <td>Item3</td>
+                                    <td> Morbi faucibus arcu accumsan lorem.</td>
+                                    <td>29.99</td>
+                                </tr>
+                                <tr>
+                                    <td>Item4</td>
+                                    <td>Vitae integer tempus condimentum.</td>
+                                    <td>19.99</td>
+                                </tr>
+                                <tr>
+                                    <td>Item5</td>
+                                    <td>Ante turpis integer aliquet porttitor.</td>
+                                    <td>29.99</td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="2"></td>
+                                    <td>100.00</td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>*@
+
+            </div>
+        </div>
+    </section>
+    <!-- Scripts -->
+    <!--
+        <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+        -->
+    @*<script type="text/javascript">
+
+            const $entity = document.querySelector("#strEntity");
+            function statusEntity(strDate,strSummary) {
+                var elem = document.getElementById(strSummary);
+                var data = document.getElementById(strDate);
+                const indice = $entity.selectedIndex;
+                if (indice === -1) return; // Esto es cuando no hay elementos
+                const data1 = $entity.options[indice];
+                var url = "@Url.Action("statusEntityApi","SearchDataApi")";
+                div = document.getElementById('lblInfo');
+                div.style.display = '';
+                var data = { strDate: data.value, strEntity: data1.value };
+                $.post(url, data).done(function (data) {
+                    if (data.length > 1) {
+                        for (let i = 0; i <= data.length - 1; i++) {
+                            //alert('text' + JSON.stringify(data[i]));
+                            var text = JSON.stringify(data[i]).replace(/['"]+/g, '');
+                            elem.value = elem.value + text+'\r\n';
+                        }
+                    }
+                    else
+                    {
+                        elem.value = 'Nada que mostrar \r\n';
+                    }
+                }).fail(daError).always(function () {
+                div.style.display = 'none';
+                });
+            }
+            function daError(ex) {
+                console.log("Error");
+                alert("Ocurrio un error,recargue la pagina y vuelva a empezar." +ex);
+                div = document.getElementById('lblInfo');
+                    div.style.display = 'none';
+            }
+
+        </script>*@
 </body>
 
